--- a/excavate-ht/pyproject.toml
+++ b/excavate-ht/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "excavate"
+name = "excavate-ht"
 version = "0.1.0"
 description = "A python package for allele-specific CRISPR gRNA library generation."
 authors = [
@@ -21,7 +21,7 @@ dependencies = [
 ]
 
 [project.scripts]
-excavate = "excavate.main:main"
+excavate-ht = "excavate-ht.main:main"
 
 [tool.setuptools.packages.find]
-where = ["excavate"]
+where = ["excavate-ht"]
