--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,4 +42,4 @@ Issues = "https://github.com/akshitasax/EXCAVATE-HT/issues"
 excavate-ht = "excavate.main:main"
 
 [tool.setuptools.packages.find]
-where = ["excavate"]
+where = ["."]
