--- a/environment.yml
+++ b/environment.yml
@@ -5,11 +5,12 @@ channels:
   - defaults
 dependencies:
   - python>=3.9,<3.13
-  - numpy
-  - pandas
-  - biopython
+  - bowtie>=1.2.3
   - bedtools
   - bcftools
+  - pandas
+  - numpy
+  - biopython
   - regex
   - pyfaidx
   - pip
